[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behaviour-tree"
version = "0.1.0"
description = "Behaviour tree for multi-agent robot control"
requires-python = ">=3.10"
dependencies = [
    "py_trees",
    "numpy",
]

[project.optional-dependencies]
teamcontrol = [
    "TeamControl",
]

[tool.setuptools.packages.find]
include = ["behaviour_tree*"]
